css modifications and fixed. css for head is a little broken now, but there is no more overflow for small screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,12 +115,12 @@ body {
   }
 @media only screen and (max-width: 425px){
     body{
-  		background:
+  		background: 
 			linear-gradient(184deg, #fff0 84.3%, #006633 84.35% 100%, #fff0 100%),
-		  	linear-gradient(174deg, #fff0 83.75%, #006633 83.8% 100%, #fff0 100%),
-		  	linear-gradient(174deg, #fff0 27.5%, #006633 27.55% 47.6%, #fff0 47.65%),
-		 	linear-gradient(7deg, #fff0 29.75%, #006633 29.8% 50%, #fff0 50.05%),
-			linear-gradient(174deg, #ffcc33 13%, black 13.05%)
+	  		linear-gradient(174deg, #fff0 83.75%, #006633 83.8% 100%, #fff0 100%),
+	  		linear-gradient(174deg, #fff0 25.5%, #006633 25.55% 43.6%, #fff0 43.65%),
+	   		linear-gradient(7deg, #fff0 31.75%, #006633 31.8% 51%, #fff0 51.05%),
+			linear-gradient(174deg, #ffcc33 13.5%, black 13.55%)
     }
   }
 /*
@@ -294,6 +294,16 @@ dl dt {
 dl dd {
   overflow: hidden;
   display: block; }
+
+.bodytext{
+	font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 768px){
+	.bodytext{
+		font-size: 1.25rem;
+	}
+}
 
 blockquote,
 .blockquote {
@@ -2019,12 +2029,12 @@ input.field {
   /*For mobile*/
   width: 100%;
   left: 0%;
-  top: 375px;
+  top: 350px;
 }
 @media only screen and (min-width: 375px){
     .canvas-wrapper{
       width: 100%;
-  	  top: 350px; /*47.5%;*/
+  	  top: 320px; /*370px;*/
 	  left: 0%;
     }
   }
@@ -2122,8 +2132,8 @@ input.field {
   opacity: 0.9 }
 
 .banner-padding{
-	padding-top: 50px;
-	padding-bottom: 625px;
+	padding-top: 40px;
+	padding-bottom: 550px;
 }
 @media only screen and (min-width: 426px){
 	.banner-padding{
@@ -2481,7 +2491,7 @@ input.field {
     margin-right: 1em; }
 
 .cohost {
-  height: 60px;
+  height: 55px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   display: block;
